--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,11 +1,11 @@
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   background-color: #d9d9d9;
-  font-family: 'PT Serif', serif;
+  font-family: "PT Serif", serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.6;
@@ -30,8 +30,9 @@ a {
   color: #357b70;
 }
 
-a:hover, a:focus {
-  cursor:pointer;
+a:hover,
+a:focus {
+  cursor: pointer;
   opacity: 0.8;
   text-decoration: none;
   -webkit-transition: 0.2s;
@@ -39,11 +40,11 @@ a:hover, a:focus {
 }
 
 a:visited {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 a:focus {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 a:active {
@@ -54,36 +55,36 @@ a:focus {
   color: #489c79;
 }
 
-.button{
+.button {
   border: none;
   display: inline-block;
   font-family: inherit;
   font-style: oblique;
   background-color: #357b70;
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid rgba(0,0,0,0.3);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+  transition-duration: 0.2s;
   -webkit-transition-property: opacity;
   transition-property: opacity;
 }
 
-button{
+button {
   border: none;
   display: inline-block;
   font-family: inherit;
   font-style: oblique;
   background-color: #357b70;
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid rgba(0,0,0,0.3);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+  transition-duration: 0.2s;
   -webkit-transition-property: opacity;
   transition-property: opacity;
 }
@@ -101,22 +102,22 @@ button:hover button:focus .button:hover .button:focus {
   width: 100%;
   padding: 20px;
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 200px;
-          flex: 0 1 200px;
+  -ms-flex: 0 1 200px;
+  flex: 0 1 200px;
   margin-top: 10px;
   margin-bottom: 5%;
 }
 
 .page-header__item {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 200px;
-          flex: 0 1 200px;
+  -ms-flex: 0 1 200px;
+  flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   text-align: right;
 }
 
@@ -148,7 +149,7 @@ button:hover button:focus .button:hover .button:focus {
   margin-top: -5%;
 }
 
-table{
+table {
   width: 50%;
 }
 
@@ -189,25 +190,25 @@ input {
 .contact {
   display: block;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
   margin-top: -4%;
 }
 
 .contact-form {
-  display:-webkit-box;
-  display:-ms-flexbox;
-  display:flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
-  width:25%;
+  width: 25%;
   margin: 0 auto;
 }
 
@@ -223,7 +224,7 @@ input {
 
 .grid__item {
   background-color: #d9d9d9;
-  border: 10px solid #FFFAF0;
+  border: 10px solid #fffaf0;
   padding: 10px;
 }
 
@@ -240,15 +241,15 @@ input {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   text-align: center;
 }
 
 .social__logo:hover {
-  opacity: .5;
-  -webkit-transition: all .25s ease-in-out;
-  transition: all .25s ease-in-out;
+  opacity: 0.5;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
 
 @media all and (max-width: 500px) {
@@ -257,7 +258,7 @@ input {
     grid-template-columns: 1fr;
   }
 }
-@media all and (min-width: 500px) and (max-width: 750px){
+@media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
@@ -302,59 +303,59 @@ input {
 
 .sun {
   -webkit-animation: 4s color-change infinite alternate linear;
-          animation: 4s color-change infinite alternate linear;
+  animation: 4s color-change infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move {
   from {
     -webkit-transform: translate(0, 50px);
-            transform: translate(0, 50px);
+    transform: translate(0, 50px);
   }
   to {
     -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
   }
 }
 
 @keyframes cloud-move {
   from {
     -webkit-transform: translate(0, 50px);
-            transform: translate(0, 50px);
+    transform: translate(0, 50px);
   }
   to {
     -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
   }
 }
 
 .cloud-front {
   -webkit-animation: 30s cloud-move infinite alternate linear;
-          animation: 30s cloud-move infinite alternate linear;
+  animation: 30s cloud-move infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
+    transform: translate(446px, 48px);
   }
   to {
     -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
+    transform: translate(100px, 48px);
   }
 }
 
 @keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
+    transform: translate(446px, 48px);
   }
   to {
     -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
+    transform: translate(100px, 48px);
   }
 }
 
 .cloud-back {
   -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-          animation: 34s cloud-move-reverse infinite alternate linear;
+  animation: 34s cloud-move-reverse infinite alternate linear;
 }
